[package]
name = "librelink-client"
version = "0.1.2"
edition = "2021"
authors = ["Nathael Bonnal <pro.nathaelbonnal@gmail.com>"] 
description = "SDK for LibreLink"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/librelink-client"
repository = "https://github.com/libreconnect/libre-link-client"

[dependencies]
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = "1.38.0"


